create frontend add and list veiculos from html, css and js

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,10 +13,10 @@
         <nav>
             <a href="#" onclick="showSection('form-peca-list'); listarPecas();">Listar peças</a>
             <a href="#" onclick="showSection('form-peca-add')">Adicionar peça</a>
-            <a href="#" onclick="showSection('form-estoque-list'); listarEstoques()">Listar estoques</a>
+            <a href="#" onclick="showSection('form-estoque-list'); listarEstoques();">Listar estoques</a>
             <a href="#" onclick="showSection('form-estoque-add')">Adicionar estoque</a>
-            <a href="#" onclick="showSection('form-veiculo-list')">Listar veículos</a>
-            <a href="#" onclick="showSection('form-veículo-list'); listarVeiculos()">Adicionar veículo</a>
+            <a href="#" onclick="showSection('form-veiculo-list'); listarVeiculos();">Listar veículos</a>
+            <a href="#" onclick="showSection('form-veiculo-add');">Adicionar veículo</a>
         </nav>
 
         <!-- Seção adicionar peça -->
