add section fixed to load html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,7 +20,7 @@
         </nav>
 
         <!-- Seção adicionar peça -->
-        <section id="form-peca-add" class="section-group" style="display: block;">
+        <section id="form-peca-add" class="section-group">
             <h3>Cadastrar peça</h3>
             <form>
                 <label for="nome">Nome da peça</label>
@@ -38,7 +38,7 @@
         </section>
 
         <!-- Seção listar peças -->
-        <section id="form-peca-list"  class="section-group" style="display: none;">
+        <section id="form-peca-list"  class="section-group">
              <!-- Seção pesquisar peça por ID -->
             <h3>Pesquisar peça por ID</h3>
             <form >
@@ -64,7 +64,7 @@
         </section>      
 
         <!-- Seção editar peça por ID -->
-        <section id="form-peca-modal" class="section-group-modal" style="display: none;">
+        <section id="form-peca-modal" class="section-group-modal">
             <div class="modal-content">
                 <span class="close-button" onclick="fecharModal()">&times;</span>
                 <h3>Editar peça</h3>
@@ -85,7 +85,7 @@
         </section>
 
         <!-- Seção adicionar estoque -->
-        <section id="form-estoque-add" class="section-group" style="display: block;">
+        <section id="form-estoque-add" class="section-group">
             <h3>Cadastrar estoque</h3>
             <form>
                 <label for="id_peca_estoque">ID Peca</label>
@@ -100,7 +100,7 @@
         </section>
 
          <!-- Seção listar estoques -->
-         <section id="form-estoque-list"  class="section-group" style="display: none;">
+         <section id="form-estoque-list"  class="section-group">
             <!-- Seção pesquisar estoque por ID -->
            <h3>Pesquisar estoque por ID</h3>
            <form >
@@ -124,7 +124,7 @@
        </section>   
        
         <!-- Seção editar estoque por ID -->
-        <section id="form-estoque-modal" class="section-group-modal" style="display: none;">
+        <section id="form-estoque-modal" class="section-group-modal">
             <div class="modal-content">
                 <span class="close-button" onclick="fecharModalEstoque()">&times;</span>
                 <h3>Editar estoque</h3>
@@ -142,7 +142,7 @@
         </section>
 
          <!-- Seção adicionar veiculo -->
-         <section id="form-veiculo-add" class="section-group" style="display: block;">
+         <section id="form-veiculo-add" class="section-group">
             <h3>Cadastrar veículo</h3>
             <form>
                 <label for="chassis">Chassis</label>
@@ -163,7 +163,7 @@
         </section>
 
          <!-- Seção listar veículos -->
-         <section id="form-veiculo-list"  class="section-group" style="display: none;">
+         <section id="form-veiculo-list"  class="section-group">
             <!-- Seção pesquisar veículo por CHASSIS -->
            <h3>Pesquisar veículo por CHASSIS</h3>
            <form >
@@ -189,7 +189,7 @@
        </section>   
 
         <!-- Seção editar veículo por CHASSIS -->
-        <section id="form-veiculo-modal" class="section-group-modal" style="display: none;">
+        <section id="form-veiculo-modal" class="section-group-modal">
             <div class="modal-content">
                 <span class="close-button" onclick="fecharModalVeiculo()">&times;</span>
                 <h3>Editar veiculo</h3>
